k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallet-app
  labels:
    name: wallet-app
    environment: production
